k8s/hindsight-service-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hindsight-service-ingress
spec:
  entryPoints:
    - web # HTTP entry point for redirection
    - websecure # HTTPS entry point
  routes:
    - match: Host(`hindsight-ai.com`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: hindsight-service-service
          port: 8000
      middlewares:
        - name: oauth2-proxy-auth
          namespace: default # Apply oauth2-proxy authentication
        - name: redirect-to-https
    - match: Host(`www.hindsight-ai.com`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: hindsight-service-service
          port: 8000
      middlewares:
        - name: oauth2-proxy-auth
          namespace: default # Apply oauth2-proxy authentication
        - name: redirect-to-https
  tls:
    secretName: hindsight-tls-secret # Name of the secret containing your TLS certificate and key
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
